<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColor="@color/blackColor" />
        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:hint="@string/phone_number"/>
        <EditText
            android:id="@+id/register_age"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="@string/age"/>
        <EditText
            android:id="@+id/register_disabilities"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="@string/disabilities"/>
        <EditText
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="textPostalAddress"
            android:hint="@string/address"/>
        <EditText
            android:id="@+id/register_secondary_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="textPostalAddress"
            android:hint="@string/secondary_address"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_confirm_button"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"/>
</RelativeLayout>