<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColor="@color/blackColor" />
        <EditText
            android:id="@+id/profile_phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:hint="@string/phone_number"/>
        <EditText
            android:id="@+id/profile_age"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="@string/age"/>
        <EditText
            android:id="@+id/profile_disabilities"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="@string/disabilities"/>
        <EditText
            android:id="@+id/profile_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="textPostalAddress"
            android:hint="@string/address"/>
        <EditText
            android:id="@+id/profile_secondary_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:inputType="textPostalAddress"
            android:hint="@string/secondary_address"/>
        <CheckBox
            android:id="@+id/profile_is_firefighter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Are you a firefighter?"/>
        <Button
            android:id="@+id/profile_save_button"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/save"/>
    </LinearLayout>

</RelativeLayout>